# CPU-RayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: geometry.h  model.h
src/: main.cpp  model.cpp
